<resources>
    <string name="app_name">one</string>
    <string name="action_settings">Settings</string>
    <string name="RegistroPersonas">Registro de personas</string>
    <string name="registropersonas">Registro De Personas</string>
    <string name="registro">Registro de Personas</string>
    <string name="pnombre">Primer Nombre</string>
    <string name="snombre">Segundo Nombre</string>
    <string name="papellido">Primer Apellido</string>
    <string name="sapellido">Segundo Apellido</string>
    <string name="edad">Edad</string>
    <string name="sexo">Sexo</string>
    <string name="mostrar">MOSTRAR</string>
    <string name="borrar">BORRAR</string>
    <string name="registrado">Registrado</string>
    <string name="error_1">Por favor digite su primer nombre</string>
    <string name="error_2">Por favor digite su segundo nombre</string>
    <string name="error_3">Por favor digite su primer apellido</string>
    <string name="error_4">Por favor digite su segundo apellido</string>
    <string name="error_5">Por favor digite su edad</string>
    <string name="error_6">Por favor digite su sexo</string>
    <string name="saludo_p1">Hola</string>
    <string name="saludo_p2">Tu edad es</string>
    <string name="saludo_p3">Tu genero es</string>
    <string name="registro_p">Ya estas registrado!</string>
</resources>
